kube/prod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schoolme
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schoolme
  template:
    metadata:
      labels:
        app: schoolme
    spec:
      containers:
        - image: ghcr.io/schoolme/schoolme.org.uk:latest
          name: schoolme
          resources:
            requests:
              ephemeral-storage: "2Gi"
              memory: "256Mi"
            limits:
              ephemeral-storage: "4Gi"
              memory: "512Mi"
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: schoolme
  labels:
    app: schoolme
spec:
  selector:
    app: schoolme
  ports:
    - port: 8088
      targetPort: 8000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: schoolme
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: schoolme.org.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: schoolme
                port:
                  number: 8088
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: schoolme-tls
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`schoolme.org.uk`)
      middlewares:
        - name: schoolme-gzip-compress
      services:
        - name: schoolme
          port: 8088
  tls: # This route uses TLS
    certResolver: le # Uses our certificate resolver to get a certificate automatically!
---
# Enable gzip compression
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: schoolme-gzip-compress
spec:
  compress: {}
